--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "@typescript-eslint/no-explicit-any": 0
   },
   "extends": [
     "eslint:recommended",
